# matrix_media_player

./: CMakeLists.txt  README.md  matrix_video_player.sln
matrix_video_player/: converter.cpp  converter.h  input_parser.cpp  input_parser.h  main.cc  matrix_video_player.vcxproj  matrix_video_player.vcxproj.filters  screenshot.cc  screenshot.h  video_player.cpp  video_player.h
